# T3_CG

./: .gitignore  CMakeLists.txt  README.md
T3/: Extras.h  linux64.cbp  linux64.depend  linux64.layout  main.cpp
T3/include/: Aux.h  Bloco.h  Desenha.h  EnemySpawner.h  Esfera.h  GameController.h  IO.h  Pad.h  Plano.h  Tabuleiro.h  Triangulo.h  Vertice.h  aux.h  bloco.h  camera.h  desenha.h  esfera.h  gameController.h  glcText.h  glcTexture.h  glcWavefrontObject.h  io.h  pad.h  plano.h  skybox.h  tabuleiro.h  triangulo.h  vertice.h
T3/src/: Aux.cpp  Bloco.cpp  Desenha.cpp  EnemySpawner.cpp  Esfera.cpp  GameController.cpp  IO.cpp  Pad.cpp  Plano.cpp  Tabuleiro.cpp  Triangulo.cpp  Vertice.cpp  aux.cpp  bloco.cpp  camera.cpp  desenha.cpp  esfera.cpp  gameController.cpp  glcSound.cpp  glcText.cpp  glcTexture.cpp  glcWavefrontObject.cpp  io.cpp  pad.cpp  plano.cpp  tabuleiro.cpp  triangulo.cpp  vertice.cpp
T3/src/fases/: 0.txt  1 teste vidas.txt  1.txt  2 teste vidas.txt  2.txt
